Arreglo de algunas cosas en Boleta y Cliente